--- a/root/package.json
+++ b/root/package.json
@@ -1,16 +1,22 @@
 {
-  "name": "{%= name %}",
-  "version": "0.0.1",
-  "dependencies": {
-    "solidus": "~0.0.1"
-  },
+  "name": "solidus-test-site",
+  "version": "0.0.0",
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-contrib-sass": "~0.2.2",
+    "grunt-contrib-sass": "~0.3.0",
     "grunt-contrib-concat": "~0.1.3",
-    "grunt-contrib-copy": "~0.4.0",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-handlebars": "~0.5.8",
-    "grunt-contrib-watch": "~0.4.3"
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-clean": "~0.4.1",
+    "grunt-regarde": "~0.1.1",
+    "grunt-contrib-handlebars": "~0.5.9",
+    "grunt-contrib-watch": "~0.4.3",
+    "grunt-contrib-requirejs": "~0.4.1",
+    "grunt-contrib-uglify": "~0.2.2",
+    "grunt-contrib-cssmin": "~0.6.1",
+    "grunt-cssjoin": "~0.2.0",
+    "grunt-filerev": "~0.1.0"
+  },
+  "dependencies": {
+    "solidus": "~0.0.1"
   }
 }
