--- a/root/package.json
+++ b/root/package.json
@@ -2,9 +2,14 @@
   "name": "{%= name %}",
   "version": "0.0.0",
   "main": "start.js",
+  "scripts": {
+    "build": "./node_modules/.bin/grunt build",
+    "watch": "./node_modules/.bin/grunt watch"
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-contrib-sass": "~0.3.0",
+    "grunt-cli": "~0.1.13",
+    "grunt-contrib-sass": "~0.8.1",
     "grunt-contrib-concat": "~0.1.3",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-clean": "~0.4.1",
